feat(updater): Introduce ValetudoUpdaterNoUpdateRequiredState
